# oxy-torrent

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
src/: index.html  main.rs
ui/: appwindow.slint
