[package]
name = "oxy-torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
hex = "0.4"
sha1 = "0.10"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } # Убрали blocking
urlencoding = "2.1"
axum = "0.7"
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] } # Чтобы отдавать статические файлы