[package]
name = "oxy-torrent"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
hex = "0.4"
sha1 = "0.10"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
rand = "0.8"
serde_json = "1.0"
rfd = "0.15"
slint = "1.9"

[build-dependencies]
slint-build = "1.9"